# benjaminos

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: file-creator.md  git-workflow.md  test-writer-fixer.md
.github/workflows/: ci.yml
apps/morning-artifact/: README.md
docs/: architecture.md
infrastructure/: README.md
infrastructure/vps-scripts/: gbrain-embed.sh  gbrain-import-local.sh  gbrain-import.sh  goodnotes-process.sh  notability-process.sh  voicenotes-process.sh  wiki-sync.sh
scripts/: classify_one.py  smoke_classify.py
scripts/eval/: check_notability_active.py  db_test.py  diff_goodnotes.py  dispatchers_test.py  find_notability.py  find_ntb.py  find_transcript.py  gbrain_test.py  gn_pdf_text.py  gn_strings.py  groq_test.py  judge.py  list_daily.py  notability_test.py  pick_small_ntb.py  probe_gn_zip.py  probe_goodnotes.py  probe_goodnotes2.py  probe_goodnotes3.py  probe_m4a.py  probe_ntb.py  probe_pdf.py  probe_pdf2.py  repro_craig.py  seed_goodnotes.py  seed_notability_state.py  sizes.py  test_linear_default.py  unpack_ntb.py  verify_audio.py  where_is_it.py  wiki_test.py
tests/: test_smoke.py
tests/classifier/: __init__.py  conftest.py  test_envelope.py  test_prompts.py  test_routes.py
tests/shared/: __init__.py  test_clients_init.py
