[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benjaminos"
version = "0.1.0"
description = "Benjamin White's personal Chief-of-Staff system — the code that runs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Benjamin White", email = "b@white.ai" }]

dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]
ingest = [
  "supabase>=2.5",
  "openai>=1.30",
]
gws = [
  "google-api-python-client>=2.120",
  "google-auth>=2.30",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/ingest", "packages/pharoah", "packages/hermes", "packages/shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests that hit real services (skipped by default)",
  "slow: tests that take >5s",
]
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
